# cpp-simple-queue

./: CMakeLists.txt  README.md  server.cpp  worker.cpp
